Fix window overflow

--- a/src/app/apps/app-center/app-center.component.scss
+++ b/src/app/apps/app-center/app-center.component.scss
@@ -6,7 +6,7 @@
 
     .search{
         width: 300px;
-        margin: 30px auto;
+        margin: 20px auto;
 
         mat-form-field{
             width: 100%;
