--- a/src/app/system/components/window/window-handle/window-handle.component.scss
+++ b/src/app/system/components/window/window-handle/window-handle.component.scss
@@ -3,7 +3,7 @@
 
     mat-icon{
         vertical-align: bottom;
-        color: var(--system-color-primary); // TODO - Adapt color with background
+        color: var(--system-color-secondary); // TODO - Adapt color with background
         opacity: 0.8;
 
         transform: rotate(45deg) translate(3px, 3px);
